turbopack/crates/turbo-tasks-macros-tests/tests/derive_operation_value/fail_contains_vc_and_resolved_vc.rs
#![allow(dead_code)]

use turbo_tasks::{OperationValue, ResolvedVc, Vc};

#[derive(OperationValue)]
struct ContainsVcAndResolvedVc {
    a: Vc<i32>,
    b: ResolvedVc<i32>,
}

fn main() {}
